--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -102,7 +102,7 @@
                         x = a.split("/");
                         r = +new Date(+x[2], +x[1] - 1, +x[0]);
                     }
-                    console.log("[PRECALC] " + a + " becomes " + r);
+                    //console.log("[PRECALC] " + a + " becomes " + r);
                     return r;
                 },
                 "customdatesort-asc": function (a, b) {
@@ -213,7 +213,7 @@
                     xhr.setRequestHeader("Content-Encoding", "gzip");
                 },
                 type: "POST",
-                data: JSON.stringify({ volunteerId: volunteerId,maxDays:-1 }),
+                data: JSON.stringify({ volunteerId: volunteerId,maxDays:30 }),
                 success: function (data) {
                     arr_rides = JSON.parse(data.d);
                     GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_rides));
