--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -35,11 +35,25 @@
     <script src="lib/includeHTML.js"></script>
     <script>
         checkCookie();
-        var allPatientsFromDB=[];
+        var allPatientsFromDB = [];
+        var isAssistant = JSON.parse(GENERAL.USER.getIsAssistant());
         $(document).ready(function () {
-
+            var assistantName = "";
+            if(isAssistant){
+                $("#menuType").attr("w3-include-html","HelperMenu.html");
+                var coorAssistant = GENERAL.USER.getCoorAssistant();
+                assistantName = GENERAL.USER.getAsistantDisplayName();
+            }
+            else $("#menuType").attr("w3-include-html","menu.html");
             includeHTML();
-            $('[data-toggle="tooltip"]').tooltip();
+
+            $('[data-toggle="tooltip"]').tooltip({
+                selector: '[rel=tooltip]',
+                placement: 'auto',
+                fallbackPlacement: 'flip',
+                container: 'body'
+                
+            })
 
             if(window.location.hostname.toString()=='localhost' || window.location.pathname.indexOf('test')!=-1){
                 $("#na").css("background-color", "#ffde89");
@@ -47,8 +61,14 @@
            if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
                 window.location.href = "notAvailable.html";
             }
-            var userName = GENERAL.USER.getUserDisplayName();
-            $("#userName").html(userName);
+            if(isAssistant){
+                var userName = GENERAL.USER.getAsistantAndCoorDisplayName();
+                $("#userName").html(userName);
+            }
+            else{
+                var userName = GENERAL.USER.getUserDisplayName();
+                $("#userName").html(userName);
+            }
             //adds menu.html content into any "#menu" element
             //$('#menu').load('menu.html');
 
@@ -121,19 +141,6 @@
                             var n = d.getFullYear();
                             var newDate = n - year[2];
                             if (newDate != 0) {
-<<<<<<< Updated upstream
-                                //t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
-                                Patient = {
-                                    DisplayName: arr_patients[i].DisplayName,
-                                    EnglishName: arr_patients[i].EnglishName,
-                                    CellPhone:cellPhoneCheck,
-                                    Date:newDate,
-                                    Barrier:arr_patients[i].Barrier.Name,
-                                    Hospital:arr_patients[i].Hospital.Name,
-                                    Equipment:equip,
-                                    Remarks:arr_patients[i].Remarks,
-                                    Buttons:btnStr
-=======
                                 if (isAssistant) {
                                     Patient = {
                                         DisplayName: arr_patients[i].DisplayName,
@@ -204,22 +211,12 @@
                                     //Equipment: equip,
                                     Remarks: arr_patients[i].PatientIdentity===0?"":arr_patients[i].PatientIdentity,
                                     Buttons: btnStr
->>>>>>> Stashed changes
                                 };
                             }
                             else {
                                 Patient = {
                                     DisplayName: arr_patients[i].DisplayName,
                                     EnglishName: arr_patients[i].EnglishName,
-<<<<<<< Updated upstream
-                                    CellPhone:cellPhoneCheck,
-                                    Date:"",
-                                    Barrier:arr_patients[i].Barrier.Name,
-                                    Hospital:arr_patients[i].Hospital.Name,
-                                    Equipment:equip,
-                                    Remarks:arr_patients[i].Remarks,
-                                    Buttons:btnStr
-=======
                                     CellPhone: cellPhoneCheck,
                                     Date: "",
                                     Barrier: arr_patients[i].Barrier.Name,
@@ -227,25 +224,8 @@
                                     //Equipment: equip,
                                     Remarks: arr_patients[i].PatientIdentity===0?"":arr_patients[i].PatientIdentity,
                                     Buttons: btnStr
->>>>>>> Stashed changes
                                 };
-                               // t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                             }
-
-                        }
-                        else {
-                                Patient = {
-                                    DisplayName: arr_patients[i].DisplayName,
-                                    EnglishName: arr_patients[i].EnglishName,
-                                    CellPhone:cellPhoneCheck,
-                                    Date:"",
-                                    Barrier:arr_patients[i].Barrier.Name,
-                                    Hospital:arr_patients[i].Hospital.Name,
-                                    Equipment:equip,
-                                    Remarks:arr_patients[i].Remarks,
-                                    Buttons:btnStr
-                                };
-                            //t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                         }
 
                         allPatientsFromDB.push(Patient);
@@ -254,6 +234,10 @@
 
                     tbl = $('#datatable-buttons').DataTable({
                         data: allPatientsFromDB,
+                        language: {
+                            searchPlaceholder: "Search records",
+                            search: "",
+                        },
                         "autoWidth": false,
                         "destroy": true,
                         dom: 'Bfrtip',
@@ -267,7 +251,7 @@
                             { data: "Date" },
                             { data: "Barrier" },
                             { data: "Hospital" },
-                            { data: "Equipment" },
+                            //{ data: "Equipment" },
                             { data: "Remarks" },
                             { data: "Buttons" },
                         ],
@@ -305,18 +289,18 @@
                     $('#datatable-buttons tbody').on('click', '#remove', function () {
                         var data = tbl.row($(this).parents('tr')).data();
                         swal({
-                            title: "האם אתם בטוחים?",
+                            title: "هل انت متأكد?\nהאם אתם בטוחים?",
                             type: "warning",
-                            text: "מחיקת החולה " + data.DisplayName,
+                            text: "מחיקת החולה " + data.DisplayName + "\nحذف المريض " + data.DisplayName,
                             showCancelButton: true,
-                            cancelButtonText: "בטל",
+                            cancelButtonText: "الغاء\nבטל",
                             confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "מחיקה",
+                            confirmButtonText: "حذف\nמחיקה",
                             closeOnConfirm: false
                         }, function () {
                             SetPatientStatus(data.DisplayName, 'false');
                             swal({
-                                title: "החולה הפך ללא פעיל",
+                                title: "تم تحويل المريض لغير فعال\nהחולה הפך ללא פעיל",
                                 timer: 1000,
                                 type: "success",
                                 showConfirmButton: false
@@ -328,18 +312,18 @@
                     $('#datatable-buttons tbody').on('click', '#reactive', function () {
                         var data = tbl.row($(this).parents('tr')).data();
                         swal({
-                            title: "האם אתם בטוחים?",
+                            title: "هل انت متأكد?\nהאם אתם בטוחים?",
                             type: "warning",
-                            text: "שחזור החולה " + data.DisplayName,
+                            text: "שחזור החולה " + data.DisplayName + "\nاسترجاع المريض " + data.DisplayName,
                             showCancelButton: true,
-                            cancelButtonText: "בטל",
+                            cancelButtonText: "الغاء\nבטל",
                             confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "שחזר",
+                            confirmButtonText: "שחזר\nاسترجاع",
                             closeOnConfirm: false
                         }, function () {
                             SetPatientStatus(data.DisplayName, 'true');
                             swal({
-                                title: "החולה הפך לפעיל",
+                                title: "החולה הפך לפעיל\nتم تحويل المريض لفعال",
                                 timer: 1000,
                                 type: "success",
                                 showConfirmButton: false
@@ -420,7 +404,7 @@
         </div>
         <!-- Top Bar End -->
         <!-- ========== Right Sidebar Start ========== -->
-        <div w3-include-html="menu.html"></div>
+        <div id="menuType"></div>
         <!-- Right Sidebar End -->
         <!-- ============================================================== -->
         <!-- Start page Content here -->
@@ -449,45 +433,20 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="card-box table-responsive">
-                                <!--<div class="row">
-                                    <div class="col-sm-8">
-                                        <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
-                                        <p class="text-muted font-13 m-b-30">
-                                            מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
-                                        </p>
-                                    </div>
-                                    <div class="col-sm-4 text-right">
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> ערכיה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
-                                    </div>
-                                </div>-->
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activePatient" type="checkbox" onchange="refreshTable()" checked>
-                                        <label data-placement="bottom" data-toggle="tooltip" title="مرضى فعالون فقط   Active Patients only" for="activePatient">
+                                        <label data-placement="left" data-toggle="tooltip" title="مرضى فعالون فقط   Active Patients only" for="activePatient">
                                             חולים פעילים בלבד
                                         </label>
                                     </div>
                                     <div class="col-sm-9 text-right ">
-                                        <button type="button" id="createCustomer" onclick="newPatientForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
+                                        <button data-toggle="tooltip" title="جديد  New Patient" data-placement="right" type="button" id="createCustomer" onclick="newPatientForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
                                     </div>
                                 </div>
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
-                                    <thead>
+                                    <thead >
                                         <tr>
-<<<<<<< Updated upstream
-                                            <th>החולה</th>
-                                            <th>שם באנגלית</th>
-                                            <th data-toggle="tooltip" title="هاتف   Phone">טלפון</th>
-                                            <th data-toggle="tooltip" title="جيل   Age">גיל</th>
-                                            <th data-toggle="tooltip" title="معبر   Border Crossing">מחסום</th>
-                                            <th data-toggle="tooltip" title="مستشفى   Hospital">בית חולים</th>
-                                            <th data-toggle="tooltip" title="معدات مرافقة   Equipment">ציוד נלווה</th>
-                                            <th data-toggle="tooltip" title="ملاحظات   Notes">הערות</th>
-                                            <th data-toggle="tooltip" title="اعمال   Actions">פעולות</th>
-=======
                                             <th title="اسم   Name">החולה</th>
                                             <th title="اسم  English Name">שם באנגלית</th>
                                             <th title="هاتف   Phone">טלפון</th>
@@ -497,7 +456,6 @@
                                             <!--<th data-toggle="tooltip" title="معدات مرافقة   Equipment">ציוד נלווה</th>-->
                                             <th title="patient id">תעודת זהות</th>
                                             <th title="اعمال   Actions">פעולות</th>
->>>>>>> Stashed changes
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
