--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -329,6 +329,7 @@
                     });
                 }
             }
+            GetDatabaseType();
         });
 
         function GetDatabaseType() {
