--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -798,7 +798,7 @@
                         </div>
 
                         <div class="pull-right">
-                            <a href="passwordForm.html"> <span class="logo" id="userName"></span>&nbsp;<span class="logo" id="databaseType"></span></a>
+                            <a href="passwordForm.html"> <span class="logo" id="userName"></span>&nbsp;<span style="color:#3BAFDA" class="logo" id="databaseType"></span></a>
                         </div>
                     </div>
                     <!--/.nav-collapse -->
