--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -157,7 +157,7 @@
             //debugger;
             if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
                 window.location.href = "notAvailable.html";
-            }
+            } // Check that the user did not entered the old path
             var errorClass = 'invalid';
             var errorElement = 'em';
             $('[data-toggle="tooltip"]').tooltip();   
