--- a/Road to Recovery/pages/notAvailable.html
+++ b/Road to Recovery/pages/notAvailable.html
@@ -33,7 +33,7 @@
             <div class="col-md-12">
                 <div class="error-template">
                     <h1 dir="rtl">
-                        אופס!!!!
+                        אופס!!!!!
                     </h1>
                     <div dir="rtl" class="error-details">
                         רכז/ת יקר/ה, הדף אינו זמין. 
