--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -6,7 +6,7 @@
 
             <ul>
                 <li>
-                    <a href="manageRidePats.html" class="waves-effect waves-primary">
+                    <a title="تنسيق السفريات الخاصة بي" href="manageRidePats.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                         </i>
@@ -15,7 +15,7 @@
                 </li>
 
                 <li>
-                    <a href="viewRidePats.html" class="waves-effect waves-primary">
+                    <a title="جميع السفريات" href="viewRidePats.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/היסטורית הסעות.png" height="25" width="25" />
                         </i>
@@ -24,7 +24,7 @@
                 </li>
 
                 <li>
-                    <a href="viewPatient.html" class="waves-effect waves-primary">
+                    <a title="إدارة المرضى" href="viewPatient.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/רשימת חולים.png" height="25" width="25" />
                         </i>
@@ -33,7 +33,7 @@
                 </li>
 
                 <li>
-                    <a href="viewVolunteer.html" class="waves-effect waves-primary">
+                    <a title="إدارة المتطوعين" href="viewVolunteer.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/רשימת מתנדבים.png" height="25" width="25" />
                         </i>
@@ -44,7 +44,7 @@
 
 
                 <li>
-                    <a href="viewLog.html" class="waves-effect waves-primary">
+                    <a title="سجل النظام" href="viewLog.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
@@ -57,12 +57,12 @@
                         <i>
                             <img src="../../Media/התנתקות מהמערכת.png" height="25" width="25" />
                         </i>
-                        <span>התנתקות מהמערכת</span>
+                        <span title="تسجيل خروج">התנתקות מהמערכת</span>
                     </a>
                 </li>
                 <li>
                     <!--<span>למנהל</span>-->
-                    <a href="viewLocation.html" class="waves-effect waves-primary">
+                    <a title="ادارة موقع الالتقاء والتنزيل" href="viewLocation.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/נקודות איסוף.png" height="25" width="25" />
                         </i>
@@ -71,7 +71,7 @@
                 </li>
                 <li>
                     <!--<span>למנהל</span>-->
-                    <a href="versionForm.html" class="waves-effect waves-primary">
+                    <a title="ادارة نسخ التطبيق" href="versionForm.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
@@ -80,7 +80,7 @@
                 </li>
                 <li>
                     <!--<span>למנהל</span>-->
-                    <a href="https://docs.google.com/spreadsheets/d/1_2h2xZSR1XMpklUYMb5EinnJs7glEB6qfKy9kHZtOrs/edit?ts=5c7d5ebf#gid=0" class="waves-effect waves-primary">
+                    <a title="كتابة ملاحظات" href="https://docs.google.com/spreadsheets/d/1_2h2xZSR1XMpklUYMb5EinnJs7glEB6qfKy9kHZtOrs/edit?ts=5c7d5ebf#gid=0" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
