--- a/Road to Recovery/pages/passwordForm.html
+++ b/Road to Recovery/pages/passwordForm.html
@@ -247,7 +247,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
         </div>
