--- a/Road to Recovery/pages/Irrelevant/customersForm.html
+++ b/Road to Recovery/pages/Irrelevant/customersForm.html
@@ -510,7 +510,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
         </div>
