--- a/Road to Recovery/pages/about.html
+++ b/Road to Recovery/pages/about.html
@@ -379,9 +379,9 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
 
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה 
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה 
             </footer>
             <!-- End FOOTER -->
 
