--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -130,7 +130,7 @@
 
     </div>
     <div class="text-center">
-        תאריך עדכון אחרון: 08/10/2019 10:10
+        תאריך עדכון אחרון: 07/12/2019 10:45 לאחר איחוד גרסאות עם ספיר
     </div>
         <div class="row" id="footer">
             <div class="col-sm-4">
