--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -180,7 +180,7 @@
             refreshTable();
 
             if (!isAssistant) {
-                setInterval("refreshTable()", 60000);
+                setInterval("refreshTable()", 180000);
             }           
         });
 
@@ -943,7 +943,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer data-toggle="tooltip" data-placement="top" title="© 2018 - 2019. All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
 
