--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -34,6 +34,8 @@
     <script src="assets/js/select2.min.js"></script>
     <script src="lib/includeHTML.js"></script>
     <script>
+        var cleanPhoneNumber;
+
         checkCookie();
         var allPatientsFromDB = [];
         var isAssistant = JSON.parse(GENERAL.USER.getIsAssistant());
@@ -82,6 +84,26 @@
             //});
 
             refreshTable();
+
+            //var pastePhone = document.getElementById('pastePhone');
+
+            //cleanPhoneNumber = function (e) {
+            //    e.preventDefault();
+            //    var pastedText = '';
+            //    if (window.clipboardData && window.clipboardData.getData) { // IE
+            //        pastedText = window.clipboardData.getData('Text');
+            //    } else if (e.clipboardData && e.clipboardData.getData) {
+            //        pastedText = e.clipboardData.getData('text/plain');
+            //    }
+            //    var patt = /(\d{1,3},\d{3}(,\d{3})*)(\.\d*)?|\d+\.?\d*/;
+            //    var res = patt.test(pastedText);
+            //    if (res) {
+            //        this.value = pastedText.replace(/\D/g, '');
+            //    } else {
+            //        this.value = pastedText;
+            //    }
+            //};
+
         });
 
 
@@ -332,7 +354,7 @@
                         });
 
                     });
-
+        pastePhone.onpaste = cleanPhoneNumber;
         }
 
         function SetPatientStatus(displayName, active) {
@@ -474,7 +496,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
         </div>
