--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -725,7 +725,8 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                
             </footer>
             <!-- End FOOTER -->
 
