--- a/Road to Recovery/pages/viewVolunteer-Old Datatable version.html
+++ b/Road to Recovery/pages/viewVolunteer-Old Datatable version.html
@@ -385,7 +385,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
 
