--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -52,6 +52,10 @@
     <script></script>
 
     <script>
+
+        var cleanPhoneNumber;
+
+
         checkCookie();
         var allVolunteersFromDb = [];
         $(document).ready(function () {
@@ -98,10 +102,32 @@
             });
 
             refreshTable();
+
+            //var pastePhone = document.getElementById('pastePhone');
+
+            //cleanPhoneNumber = function (e) {
+            //    e.preventDefault();
+            //    var pastedText = '';
+            //    if (window.clipboardData && window.clipboardData.getData) { // IE
+            //        pastedText = window.clipboardData.getData('Text');
+            //    } else if (e.clipboardData && e.clipboardData.getData) {
+            //        pastedText = e.clipboardData.getData('text/plain');
+            //    }
+            //    var patt = /(\d{1,3},\d{3}(,\d{3})*)(\.\d*)?|\d+\.?\d*/;
+            //    var res = patt.test(pastedText);
+            //    if (res) {
+            //        this.value = pastedText.replace(/\D/g, '');
+            //    } else {
+            //        this.value = pastedText;
+            //    }
+            //};
+
+
         });
 
 
         function refreshTable() {
+
             allVolunteersFromDb = [];
             $('#wait').show();
             checkCookie();
@@ -146,7 +172,10 @@
                             CellPhone2: cellphone2,
                             City: arr_volunteers[i].City,
                             Remarks: arr_volunteers[i].Remarks,
-                            Buttons: btnStr
+                            Buttons: btnStr,
+        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                            EnglishName: arr_volunteers[i].EnglishName
+        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
                         }
                         allVolunteersFromDb.push(Volunteer);
                     }
@@ -166,13 +195,20 @@
                             {
                                 targets: 5,
                                 className: 'dt-body-left'
+                            },
+                            {
+                                targets: 3,
+                                className: 'text-left-strong'
                             }
+
                         ],
                         columns: [
                             { data: "DisplayName" },
                             { data: "TypeVol" },
                             { data: "CellPhone" },
-                            { data: "CellPhone2" },
+
+                            { data: "EnglishName" },
+
                             { data: "City" },
                             { data: "Remarks" },
                             { data: "Buttons" },
@@ -188,6 +224,7 @@
             });
         }
         function buttonsEvents(){
+        pastePhone.onpaste = cleanPhoneNumber;
             $('#datatable-buttons tbody').on('click', '#edit', function () {
                 var data = tbl.row($(this).parents('tr')).data();
                 arr_details = { displayName: data.DisplayName, func: "edit" };
@@ -321,9 +358,9 @@
 
                         <!--Search-->
                         <!--<form role="search" class="navbar-right app-search pull-right hidden-xs">
-        <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
-        <a href=""><i class="fa fa-search"></i></a>
-    </form>-->
+                            <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
+                            <a href=""><i class="fa fa-search"></i></a>
+                        </form>-->
                     </div>
                     <!--/.nav-collapse -->
                 </div>
@@ -349,10 +386,11 @@
 
                                     <li class="active">ניהול מתנדבים</li>
                                 </ol>
-                                <h4 class="page-title">ניהול מתנדבים&nbsp&nbsp
-                                <i>
-                                    <img src="../../Media/רשימת מתנדבים.png" height="25" width="25"/>
-                                </i>
+                                <h4 class="page-title">
+                                    ניהול מתנדבים&nbsp&nbsp
+                                    <i>
+                                        <img src="../../Media/רשימת מתנדבים.png" height="25" width="25" />
+                                    </i>
                                 </h4>
                             </div>
                         </div>
@@ -365,19 +403,19 @@
                             <div class="card-box table-responsive">
 
                                 <!--<div class="row">
-        <div class="col-sm-8">
-            <h4 class="m-t-0 header-title"><b>טבלת מתנדבים</b></h4>
-            <p class="text-muted font-13 m-b-30">
-                מבט כללי על המתנדבים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
-            </p>
-        </div>
-        <div class="col-sm-4 text-right">
-            <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
-            <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> עריכה
-            <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
-            <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
-        </div>
-    </div>-->
+                                    <div class="col-sm-8">
+                                        <h4 class="m-t-0 header-title"><b>טבלת מתנדבים</b></h4>
+                                        <p class="text-muted font-13 m-b-30">
+                                            מבט כללי על המתנדבים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
+                                        </p>
+                                    </div>
+                                    <div class="col-sm-4 text-right">
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> עריכה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
+                                    </div>
+                                </div>-->
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activeCustomers" type="checkbox" onchange="refreshTable()" checked>
@@ -396,13 +434,19 @@
                                             <th>המתנדב/ת</th>
                                             <th>סוג משתמש/ת</th>
                                             <th>טלפון</th>
-                                            <th>טלפון נוסף</th>
+                                            <th>שם באנגלית</th>
                                             <th>יישוב</th>
                                             <th style="text-align:right">הערות</th>
                                             <th>פעולות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
+
+
+
+
+
+
                                 </table>
                                 <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
                                     <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
@@ -421,7 +465,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
 
